# team-assignment-rai-7004

./: .pre-commit-config.yaml  DEVELOPER_GUIDE.md  LICENSE  README.MD  README.md  example.py  main.ipynb  main.py  pyproject.toml  requirements.txt
.github/: dependabot.yml  generate_changelog.sh
.github/actions/code-quality/: action.yml
.github/actions/setup-env/: action.yml
.github/workflows/: config.yml  main.yml
src/: cli.py  main.ipynb  main.py  metrics.py  setup.py
src/io/: __init__.py  loader.py  saver.py
src/loader/: __init__.py
src/metric/: __init__.py  base_metric_handler.py  metric_factory.py  model_type.py
src/metric/classification/: handler.py  result.py
src/metric/regression/: handler.py  result.py
src/ml_pipeline_handler/: __init__.py  algorithm.py
src/ml_pipeline_handler/io/: __init__.py  saver.py
src/ml_pipeline_handler/metric/: __init__.py  base_metric_handler.py  base_result.py  metric_factory.py
src/ml_pipeline_handler/metric/classification/: __init__.py  handler.py  result.py
src/ml_pipeline_handler/metric/regression/: handler.py  result.py
src/ml_pipeline_handler/pipeline/: base_config.py  base_pipeline.py  decision_tree_classifier_pipeline.py  decision_tree_regressor_pipeline.py  linear_regression_pipeline.py  pipeline_factory.py
src/ml_pipeline_handler/pipeline/classification/: decision_tree_classifier_pipeline.py  logistic_regression_classifier_pipeline.py  random_forest_pipeline.py
src/ml_pipeline_handler/pipeline/regression/: __init__.py  decision_tree_regressor_pipeline.py  linear_regression_pipeline.py  logistic_regression_pipeline.py  random_forest_regressor_pipeline.py
tests/: decision_tree_pipeline_test  decision_tree_pipeline_test.py  demo_test.py  logistic_regression_pipeline_test.py  metric_test.py  random_forest_pipeline_test.py  random_forest_regressor_pipeline_test.py
