[tool.poetry]
name = "team-assignment-rai-7004"
version = "0.0.1"
description = "Team Assignment RAI-7004"
authors = ["Loïc Motheu <lmotheu@gmail.com>"]
readme = "README.md"
packages = [{ include = "src" }]

[tool.poetry.dependencies]
python = "^3.12"
loguru = "^0.7.2"
scikit-learn = "^1.5.2"
numpy = "^2.1.3"
pandas = "^2.2.3"

[tool.poetry.group.dev.dependencies]
mypy = "^1.13.0"
pre-commit = "^4.0.1"
pytest = "^8.3.4"
ruff = "^0.8.2"
jupyter = "^1.1.1"

[tool.ruff]
src = ["src"]
line-length = 120
indent-width = 4

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.ruff.lint]
select = ["ALL"]
ignore = ["D203", "COM812", "ISC001", "D213", "FA102", "FA100", "EM102", "TRY003", "RET503", "TD003", "FIX002", "TD002", "TC002", "PLR0913", "TID252"]
fixable = ["ALL"]
unfixable = []
exclude = ["tests/*"]

[tool.mypy]
exclude = "tests/*"
explicit_package_bases = true #Allow for reusable file names in different modules.
ignore_missing_imports = true #Used for scikit-learn missing stubs.

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"